# mock-http-connector

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: simple.rs  simple_0_14.rs
src/: builder.rs  case.rs  case_old.rs  connector.rs  error.rs  handler.rs  hyper.rs  level.rs  lib.rs  stream.rs
src/handler/: mod.rs  returning.rs  with.rs
src/handler/with/: json.rs  mod.rs  reason.rs  report.rs
src/response/: future.rs  mod.rs  result.rs
tests/: async.rs  returning.rs  returning_0_14.rs  status.rs  status_0_14.rs  stream.rs  stream_0_14.rs  with.rs  with_0_14.rs
tests/helpers/: mod.rs
