[package]
name = "mock-http-connector"
version = "0.3.1"
edition = "2021"
authors = [
    "Nicolas Moutschen <nicolas.moutschen@gmail.com>"
]
description = "Mock hyper HTTPConnector"
repository = "https://github.com/nmoutschen/mock-http-connector/"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["json"]
json = ["dep:serde_json", "dep:serde"]

[dependencies]
colored = "2.0.0"
httparse = "1.8.0"
hyper = { version = "0.14.24", features = ["client", "http1"] }
itertools = "0.10.5"
paste = "1.0.11"
serde = { version = "1.0.152", optional = true }
serde_json = { version = "1.0.93", optional = true }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["io-util"] }

[dev-dependencies]
hyper = { version = "0.14.24", features = ["client", "http1", "runtime", "stream"] }
rstest = "0.16.0"
serde = { version = "1.0.152", features = ["derive"] }
speculoos = "0.11.0"
tokio = { version = "1.25.0", features = ["io-util", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tokio-test = "0.4.2"
