[package]
name = "mock-http-connector"
version = "0.4.0"
edition = "2021"
authors = ["Nicolas Moutschen <nicolas.moutschen@gmail.com>"]
description = "Mock hyper HTTPConnector"
repository = "https://github.com/nmoutschen/mock-http-connector/"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["json", "hyper_0_14"]
json = ["dep:serde_json", "dep:serde"]
hyper_0_14 = ["dep:hyper_0_14"]
hyper_1 = ["dep:hyper_1", "dep:hyper-util", "dep:http-body-util"]

[dependencies]
hyper_0_14 = { package = "hyper", version = "0.14.24", features = [
    "client",
    "http1",
], optional = true }
hyper_1 = { package = "hyper", version = "1.5.2", features = [
    "client",
    "http1",
], optional = true }
hyper-util = { version = "0.1.10", features = [
    "http1",
    "client",
    "client-legacy",
], optional = true }
http-body-util = { version = "0.1.2", optional = true }
colored = "2.0.4"
httparse = "1.8.0"
itertools = "0.10.5"
paste = "1.0.11"
serde = { version = "1.0.152", optional = true }
serde_json = { version = "1.0.93", optional = true }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["io-util"] }
tower = "0.5.2"

[dev-dependencies]
hyper_0_14 = { package = "hyper", version = "0.14.24", features = [
    "client",
    "http1",
    "runtime",
    "stream",
] }
rstest = "0.16.0"
serde = { version = "1.0.152", features = ["derive"] }
speculoos = "0.11.0"
tokio = { version = "1.25.0", features = [
    "io-util",
    "macros",
    "rt-multi-thread",
] }
tokio-stream = "0.1.14"
tokio-test = "0.4.2"
